--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <head>
-	<link rel="stylesheet" href="/css/main.css"/>
+<link rel="stylesheet" href="/css/main.css"/>
+<title>Introdução ao Three.js</title>
+<script type="module" src="/js/index.js"></script>
 </head>
+<body>
 <h1>
 	Hello Javascript
 </h1>
+</body>
+
