Ideias de Background

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,19 @@
 <head>
 <link rel="stylesheet" href="/css/main.css"/>
 <title>Introdução ao Three.js</title>
-<script type="module" src="/js/index.js"></script>
+<meta charset="utf-8"/>
 </head>
-<body>
+<body> 
+	<div class="h-screen text-red">
+	<ul>
+		<a href="/procedural/index.html"><li>Procedural Animations</li></a>
+		<a href="/nse/index.html"><li>Navier-Stokes Equations</li></a>
+		<a href="/lsys/index.html"><li>L-systems trees</li></a>
+		<a href="/gol/index.html"><li>Game of life</li></a>
+		<a href="/nog/index.html"><li>Non-overlaping Graphs</li></a>
+		<a href="/raVe/index.html"><li>raVe Sound</li></a>
+		
+	</ul>
+	</div>
 </body>
 
