--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body> 
 	<div class="h-screen text-red">
+	<h1 class="p-4 text-4xl text-bold">Hello Google AI</h1>
 	<ul>
 		<a href="/procedural/index.html"><li>Procedural Animations</li></a>
 		<a href="/nse/index.html"><li>Navier-Stokes Equations</li></a>
